============================= 2.20.0 =====================

2007-08-19  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* samples/container/bonobo-sample-container.c: (main):
	* tests/Makefile.am:
	* tests/test-moniker.c: (main): move to GOption and fix a typoe
	in Makefile.am

============================= 2.19.6 =====================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* configure.in: Build fixes.

2007-07-11  Christian Persch  <chpe@gnome.org>

	* configure.in: Temporarily remove the deprecation flags so we can
	build with gtk+ trunk. Bug #455597.

2007-06-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Bump verison.

============================= 2.19.4 =====================
2007-06-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: update
	
	* configure.in: Bump version to 2.19.4.

2007-03-23  Christian Persch  <chpe@gnome.org>

	* bonobo/Makefile.am:
	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-dock-item-grip.c:
	* bonobo/bonobo-dock-item.c:
	* bonobo/bonobo-file-selector-util.c:
	* bonobo/bonobo-plug.c:
	* bonobo/bonobo-selector-widget.c:
	* bonobo/bonobo-selector.c:
	* bonobo/bonobo-ui-config-widget.c:
	* bonobo/bonobo-ui-engine-config.c:
	* bonobo/bonobo-ui-engine.c:
	* bonobo/bonobo-ui-init-gtk.c:
	* bonobo/bonobo-ui-main.c:
	* bonobo/bonobo-ui-sync-menu.c:
	* bonobo/bonobo-ui-sync-toolbar.c:
	* bonobo/bonobo-ui-toolbar.c:
	* bonobo/bonobo-ui-util.c:
	* bonobo/bonobo-window.c:
	* bonobo/bonobo-zoomable.c:
	* tests/control/test-control.c:
	* tests/test-focus.c:
	* tests/test-sensitivity.c:
	* tests/test-toolbar.c:
	* tests/test-ui.c: Use glib/gi18n[-lib].h instead of bonobo-i18n.h.
	Bug #419535.

2007-03-17  Kjartan Maraas  <kmaraas@gnome.org>

	* tools/browser/bonobo-browser.desktop.in: Remove
	Application from the categories.

============================= 2.18.0 =====================

2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-dock.c: (get_docked_item_by_name):