@@ -1,3 +1,9 @@
+2007-11-11  J.H.M. Dassen (Ray) <jdassen@debian.org>
+
+	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb):
+	  Use a dialog for the "Help not found" message. Bug #125046.
+	  Patch from Matthias Clasen with correction from Christian Persch.
+
 ============================= 2.20.0 =====================
 
 2007-08-19  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>
